RESOLVED FIXED308553
`getClientRects-inline-with-block-child.html` started to fail recently
https://bugs.webkit.org/show_bug.cgi?id=308553
Summary `getClientRects-inline-with-block-child.html` started to fail recently
Ahmad Saleem
Reported 2026-02-24 07:25:24 PST
Hi Team, While trying to sync `cssom-view`, I noticed that it was passing as of yesterday but now it fails, I will sync and merge it with fail expectations in below PR: PR - https://github.com/WebKit/WebKit/pull/58781#issuecomment-3951808715 Just raising, so we can track and fix it. Thanks!
Attachments
Patch (3.20 KB, patch)
2026-02-24 14:26 PST, alan
no flags
[fast-cq]Patch (3.85 KB, patch)
2026-02-24 15:46 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2026-02-24 07:25:30 PST
alan
Comment 2 2026-02-24 14:26:27 PST
Simon Fraser (smfr)
Comment 3 2026-02-24 14:57:34 PST
Comment on attachment 478462 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=478462&action=review > Source/WebCore/rendering/RenderInline.cpp:258 > + context.addRect(inlineBoxRects.last()); Is there always at least one?
alan
Comment 4 2026-02-24 15:07:39 PST
no, but there's some code above that checks both 0 and 1 cases.
alan
Comment 5 2026-02-24 15:46:14 PST
Created attachment 478464 [details] [fast-cq]Patch
EWS
Comment 6 2026-02-24 19:20:24 PST
Committed 308175@main (d37686b625d2): <https://commits.webkit.org/308175@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478464 [details].
Note You need to log in before you can comment on or make changes to this bug.