`getClientRects-inline-with-block-child.html` started to fail recently https://bugs.webkit.org/show_bug.cgi?id=308553 <rdar://problem/171075516>

Reviewed by Simon Fraser.

<span>
  <div style="width: 100px; height: 50px;"></div>
</span>

While getClientRects is supposed to return the _bounding rect_, all rendering engines return 3 rects in the example above,
even though the middle one is sufficient because it fully encloses the content.

8, 8, 0, 0,
8, 8, 100, 50
8, 108, 0, 0

Let's adjust RenderInline::generateLineBoxRects so that it always returns the pre/post rectangles even when they are empty.

* LayoutTests/fast/block/inside-inlines/getClientRects-on-inline-box-missing-entry-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom-view/getClientRects-inline-with-block-child-expected.txt:
* Source/WebCore/rendering/RenderInline.cpp:
(WebCore::RenderInline::generateLineBoxRects const):

Canonical link: https://commits.webkit.org/308175@main