Source/WebCore/rendering/RenderInline.cpp
@@ -247,14 +247,15 @@ void RenderInline::generateLineBoxRects(GeneratorContext& context) const
             context.addRect(inlineBoxRects.first());
             return;
         }
-
-        for (auto inlineBoxRect : inlineBoxRects) {
-            if (!inlineBoxRect.size().isZero()) {
+        context.addRect(inlineBoxRects.first());
+        for (size_t index = 1; index < inlineBoxRects.size() - 1; ++index) {
+            if (!inlineBoxRects[index].size().isZero()) {
                 // Empty inline boxes may show up for cases where the inline box is fragmented and (usually) in-between line(s)
-                // can't accomodate any content (e.g. due to floats). Let's not report such rectanges to functions like getClientRects.
-                context.addRect(inlineBoxRect);
+                // can't accommodate any content (e.g. due to floats). Let's not report such empty rectangles to functions like getClientRects.
+                context.addRect(inlineBoxRects[index]);
             }
         }
+        context.addRect(inlineBoxRects.last());
         return;
     }
     if (auto* curr = firstLegacyInlineBox()) {
